<resources>
    <string name="app_name">Newsnest</string>
    <string name="breakingnews">Breaking News</string>
    <string name="searchnews">Search News</string>
    <string name="savednews">Saved News</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="region">Region</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="no_articles_saved">No Articles Saved.</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="made_by_sreshtha"><u>Made by Sreshtha Mehrotra</u></string>
    <array name="BreakingNewsSpinnerArr">
        <item>Global</item>
        <item>India</item>
    </array>
    <array name="categories">
        <item>General</item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </array>
    <array name="sortBy">
        <item>Newest</item>
        <item>Popularity</item>
        <item>Relevancy</item>
    </array>
    <array name="lang">
        <item>English</item>
        <item>हिन्दी</item>
    </array>
</resources>